<resources>
    <string name="app_name">Time Tracker</string>
    <string name="category_name_view">Category name</string>
    <string name="category_descr_view">Description</string>
    <string name="ok">OK</string>
    <string name="missing_fields">Missing fields</string>
    <string name="starttimerecord">Start time</string>
    <string name="starttime">Start time</string>
    <string name="endtimerecord">End time</string>
    <string name="endtime">End time</string>
    <string name="record_name_view">Name</string>
    <string name="record_descr_view">Description</string>
    <string name="select_time">Select time</string>
    <string name="select_category">For select category make long touch</string>
    <string name="category_selected">Category selected</string>
    <string name="select_icon">Long touch for select icon</string>
    <string name="long_touch">Long touch for select</string>
    <string name="icon_selected">Icon selected</string>
    <string name="action_update_record">Update record</string>
    <string name="action_delete_record">Delete record</string>
    <string name="category_of_record">Category of record</string>
    <string name="timestamp">Timestamp</string>
    <string name="category_icon_view">Icon for category</string>
    <string name="action_update_category">Update category</string>
    <string name="action_delete_category">Delete category</string>
    <string name="icon_of_category">Icon</string>
    <string name="photo_descr_view">Description photo</string>
    <string name="select_photo">Select photo</string>
    <string name="selectphoto">SelectPhoto</string>
    <string name="photo_selected">Photo selected</string>
    <string name="action_update_photo">Update photo</string>
    <string name="action_delete_photo">Delete photo</string>
    <string name="photos_of_record">Photos of record</string>
    <string name="startdate">start date</string>
    <string name="enddate">end date</string>
    <string name="incorrect_date_or_time">Incorrect date or time</string>
    <string name="missing_date_time_fields">Fill time and date</string>
</resources>
